--- a/apps/fooapp/package.json
+++ b/apps/fooapp/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ui" :"*",
-    "foolib" :"*",
-    
+    "foolib": "*",
+    "icons": "*",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ui": "*"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
